--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 fastapi==0.115.0
 uvicorn[standard]==0.32.0
-https://github.com/PoliceZ/edge-tts/archive/refs/heads/main.zip
+git+https://github.com/rany2/edge-tts.git
